# poo_project1

./: Abonament_Premiu.cpp  Abonament_Premiu.h  CMakeLists.txt  Citire.cpp  Citire.h  Printare.cpp  Printare.h  README.md  abonament_angajati.cpp  abonament_angajati.h  factura_angajati.cpp  factura_angajati.h  main.cpp
Popescu_Alina_2_261/: 18.docx  Popescu_Alina_an2_261.pkt
headers/: Abonament_Premiu.h  abonament.h  abonament_angajati.h  abonament_aniversar.h  abonament_standard.h  client.h  data_naster.h  eroare_date.h  factura.h  factura_angajati.h  factura_baza.h  factura_standar.h
sources/: Abonament_Premiu.cpp  Printare.cpp  abonament.cpp  abonament_angajati.cpp  abonament_aniversar.cpp  abonament_standard.cpp  client.cpp  data_naster.cpp  eroare_date.cpp  factura.cpp  factura_angajati.cpp  factura_baza.cpp  factura_standar.cpp
